--- a/android/build.gradle
+++ b/android/build.gradle
@@ -31,7 +31,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.facebook.react:react-native:+"  // From node_modules
-    compile "com.tencent.mars:mars-xlog:${MARS_XLOG_VERSION_NAME}${MARS_XLOG_VERSION_NAME_SUFFIX}"
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation "com.tencent.mars:mars-xlog:${MARS_XLOG_VERSION_NAME}${MARS_XLOG_VERSION_NAME_SUFFIX}"
 }
